syntax = "proto3";

package inventory;

service InventoryService {
  // Inventory CRUD
  rpc CreateInventory (CreateInventoryRequest) returns (InventoryResponse);
  rpc GetInventoryByProduct (GetInventoryByProductRequest) returns (InventoryResponse);
  rpc GetAllInventory (GetAllInventoryRequest) returns (InventoryListResponse);
  rpc GetInventoryByOwner (GetInventoryByOwnerRequest) returns (InventoryListResponse);
  rpc UpdateInventory (UpdateInventoryRequest) returns (InventoryResponse);
  
  // Stock Management
  rpc AdjustStock (AdjustStockRequest) returns (InventoryResponse);
  rpc ReserveStock (ReserveStockRequest) returns (ReservationResponse);
  rpc ReleaseStock (ReleaseStockRequest) returns (MessageResponse);
  rpc ConfirmReservation (ConfirmReservationRequest) returns (MessageResponse);
  
  // Bulk Operations
  rpc BulkReserve (BulkReserveRequest) returns (BulkReserveResponse);
  rpc CheckAvailability (CheckAvailabilityRequest) returns (AvailabilityResponse);
  
  // History & Reports
  rpc GetInventoryHistory (ProductIdRequest) returns (HistoryListResponse);
  rpc GetLowStockItems (LowStockRequest) returns (InventoryListResponse);
}

// Common messages
message Empty {}

message PaginationRequest {
  int32 page = 1;
  int32 limit = 2;
}

message MessageResponse {
  string message = 1;
  bool success = 2;
}

// Inventory messages
message Inventory {
  string id = 1;
  string productId = 2;
  int32 quantity = 3;
  int32 reserved = 4;
  int32 available = 5;
  string warehouseLocation = 6;
  int32 reorderLevel = 7;
  int32 maxStock = 8;
  bool isActive = 9;
  string createdAt = 10;
  string updatedAt = 11;
  string ownerId = 12;
}

message CreateInventoryRequest {
  string productId = 1;
  int32 quantity = 2;
  string warehouseLocation = 3;
  int32 reorderLevel = 4;
  int32 maxStock = 5;
  string ownerId = 6;
}

message UpdateInventoryRequest {
  string id = 1;
  int32 quantity = 2;
  string warehouseLocation = 3;
  int32 reorderLevel = 4;
  int32 maxStock = 5;
  bool isActive = 6;
  string ownerId = 7;
}

message ProductIdRequest {
  string productId = 1;
}

message GetInventoryByProductRequest {
  string productId = 1;
  string ownerId = 2;
}

message GetAllInventoryRequest {
  int32 page = 1;
  int32 limit = 2;
  string ownerId = 3;
}

message GetInventoryByOwnerRequest {
  string ownerId = 1;
  int32 page = 2;
  int32 limit = 3;
}

message InventoryResponse {
  Inventory inventory = 1;
  string message = 2;
}

message InventoryListResponse {
  repeated Inventory items = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
  int32 totalPages = 5;
}

// Stock adjustment messages
message AdjustStockRequest {
  string productId = 1;
  int32 quantity = 2;
  string reason = 3;
  string adjustmentType = 4; // RESTOCK, DAMAGED, RETURNED, etc.
  string notes = 5; // Additional notes from user
  string ownerId = 6; // Owner of the inventory
}

// Reservation messages
message InventoryReservation {
  string id = 1;
  string inventoryId = 2;
  string productId = 3;
  string orderId = 4;
  string customerId = 5;
  int32 reservedQuantity = 6;
  string status = 7;
  string expiresAt = 8;
  string createdAt = 9;
}

message ReserveStockRequest {
  string productId = 1;
  int32 quantity = 2;
  string orderId = 3;
  string customerId = 4;
}

message ReleaseStockRequest {
  string reservationId = 1;
}

message ConfirmReservationRequest {
  string reservationId = 1;
}

message ReservationResponse {
  InventoryReservation reservation = 1;
  string message = 2;
}

// Bulk operations
message ReserveItem {
  string productId = 1;
  int32 quantity = 2;
}

message BulkReserveRequest {
  repeated ReserveItem items = 1;
  string orderId = 2;
  string customerId = 3;
}

message BulkReserveResponse {
  repeated InventoryReservation reservations = 1;
  bool allSuccessful = 2;
  repeated string errors = 3;
}

message CheckAvailabilityRequest {
  string productId = 1;
  int32 requestedQuantity = 2;
}

message AvailabilityResponse {
  bool available = 1;
  int32 availableQuantity = 2;
  string message = 3;
}

// History messages
message InventoryHistory {
  string id = 1;
  string inventoryId = 2;
  string productId = 3;
  string action = 4;
  int32 quantityBefore = 5;
  int32 quantityAfter = 6;
  int32 quantityChanged = 7;
  string reason = 8;
  string performedBy = 9;
  string createdAt = 10;
}

message HistoryListResponse {
  repeated InventoryHistory items = 1;
  int32 total = 2;
}

message LowStockRequest {
  int32 threshold = 1;
}
