syntax = "proto3";

package order;

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (OrderResponse);
  rpc GetAllOrders (GetAllOrdersRequest) returns (GetAllOrdersResponse);
  rpc GetOrderById (GetOrderByIdRequest) returns (OrderResponse);
  rpc GetOrdersByCustomer (GetOrdersByCustomerRequest) returns (GetAllOrdersResponse);
  rpc UpdateOrderStatus (UpdateOrderStatusRequest) returns (OrderResponse);
  rpc CancelOrder (CancelOrderRequest) returns (OrderResponse);
  rpc AddItemToOrder (AddItemToOrderRequest) returns (OrderResponse);
}

message CreateOrderRequest {
  int32 customerId = 1;
  repeated OrderItemInput items = 2;
  optional string notes = 3;
  optional string shippingAddress = 4;
  optional string billingAddress = 5;
}

message OrderItemInput {
  int32 productId = 1;
  int32 quantity = 2;
  double price = 3;
  optional string notes = 4;
}

message GetAllOrdersRequest {
  optional int32 page = 1;
  optional int32 limit = 2;
  optional string status = 3;
}

message GetAllOrdersResponse {
  repeated Order orders = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message GetOrderByIdRequest {
  int32 id = 1;
}

message GetOrdersByCustomerRequest {
  int32 customerId = 1;
  optional int32 page = 2;
  optional int32 limit = 3;
}

message UpdateOrderStatusRequest {
  int32 id = 1;
  string status = 2;
  optional string notes = 3;
}

message CancelOrderRequest {
  int32 id = 1;
  optional string reason = 2;
}

message AddItemToOrderRequest {
  int32 orderId = 1;
  int32 productId = 2;
  int32 quantity = 3;
  double price = 4;
  optional string notes = 5;
}

message OrderResponse {
  Order order = 1;
}

message Order {
  int32 id = 1;
  string orderNumber = 2;
  int32 customerId = 3;
  string status = 4;
  double subtotal = 5;
  double tax = 6;
  double shippingCost = 7;
  double discount = 8;
  double totalAmount = 9;
  optional string notes = 10;
  optional string shippingAddress = 11;
  optional string billingAddress = 12;
  repeated OrderItem items = 13;
  string createdAt = 14;
  string updatedAt = 15;
}

message OrderItem {
  int32 id = 1;
  int32 orderId = 2;
  int32 productId = 3;
  int32 quantity = 4;
  double price = 5;
  double subtotal = 6;
  optional string notes = 7;
}
