syntax = "proto3";

package subscription;

service SubscriptionService {
  // Subscription operations
  rpc CreateSubscription (CreateSubscriptionRequest) returns (SubscriptionResponse);
  rpc GetSubscriptionById (SubscriptionByIdRequest) returns (SubscriptionResponse);
  rpc GetSubscriptionsByCustomer (SubscriptionsByCustomerRequest) returns (SubscriptionListResponse);
  rpc GetAllSubscriptions (Empty) returns (SubscriptionListResponse);
  rpc CancelSubscription (CancelSubscriptionRequest) returns (SubscriptionResponse);
  rpc RenewSubscription (RenewSubscriptionRequest) returns (SubscriptionResponse);
  rpc ChangePlan (ChangePlanRequest) returns (SubscriptionResponse);
  rpc UpdateSubscriptionStatus (UpdateStatusRequest) returns (SubscriptionResponse);
  
  // Trial management
  rpc CheckTrialExpiry (Empty) returns (TrialExpiryResponse);
}

// Common messages
message Empty {}

// Subscription messages
message Subscription {
  int32 id = 1;
  int32 customerId = 2;
  int32 planId = 3;
  string planName = 4;
  double amount = 5;
  string billingCycle = 6;
  string status = 7;
  string currentPeriodStart = 8;
  string currentPeriodEnd = 9;
  bool isTrialUsed = 10;
  string trialStart = 11;
  string trialEnd = 12;
  bool cancelAtPeriodEnd = 13;
  string cancelledAt = 14;
  string cancellationReason = 15;
  string createdAt = 16;
  string updatedAt = 17;
}

message CreateSubscriptionRequest {
  int32 customerId = 1;
  int32 planId = 2;
  string promotionCode = 3;
  bool useTrial = 4;
}

message SubscriptionByIdRequest {
  int32 id = 1;
}

message SubscriptionsByCustomerRequest {
  int32 customerId = 1;
}

message CancelSubscriptionRequest {
  int32 id = 1;
  string reason = 2;
  bool cancelAtPeriodEnd = 3;
}

message RenewSubscriptionRequest {
  int32 id = 1;
}

message ChangePlanRequest {
  int32 id = 1;
  int32 newPlanId = 2;
  bool immediate = 3;
}

message UpdateStatusRequest {
  int32 id = 1;
  string newStatus = 2;
  string reason = 3;
}

message SubscriptionResponse {
  Subscription subscription = 1;
  string message = 2;
}

message SubscriptionListResponse {
  repeated Subscription subscriptions = 1;
  string message = 2;
}

message TrialExpiryResponse {
  int32 processed = 1;
  int32 converted = 2;
  int32 failed = 3;
  string message = 4;
}
