import {
  Injectable,
  NotFoundException,
  BadRequestException,
  ConflictException,
  Inject,
  OnModuleInit,
} from '@nestjs/common';
import { InjectRepository } from '@nestjs/typeorm';
import { Repository } from 'typeorm';
import { ClientKafka } from '@nestjs/microservices';
import type { ClientGrpc } from '@nestjs/microservices';
import { firstValueFrom } from 'rxjs';

import { Order } from './entities/order.entity';
import { OrderItem } from './entities/order-item.entity';
import { OrderHistory } from './entities/order-history.entity';

import { CreateOrderDto } from './dto/create-order.dto';
import { AddItemDto } from './dto/add-item.dto';
import { UpdateStatusDto } from './dto/update-status.dto';
import { UpdateOrderDto } from './dto/update-order.dto';
import { createBaseEvent } from '@bmms/event';

interface ICustomerGrpcService {
  getCustomerById(data: { id: number }): any;
}

interface ICatalogueGrpcService {
  getProductById(data: { id: number }): any;
}

interface IInventoryGrpcService {
  checkAvailability(data: { productId: number; quantity: number }): any;
  reserveStock(data: { productId: number; quantity: number; orderId: number; customerId: number }): any;
}

interface ValidatedOrderItem {
  productId: number;
  quantity: number;
  price: number;
  notes?: string;
}

@Injectable()
export class OrderSvcService implements OnModuleInit {
  private customerService: ICustomerGrpcService;
  private catalogueService: ICatalogueGrpcService;
  private inventoryService: IInventoryGrpcService;

  constructor(
    @InjectRepository(Order)
    private readonly orderRepo: Repository<Order>,

    @InjectRepository(OrderItem)
    private readonly itemRepo: Repository<OrderItem>,

    @InjectRepository(OrderHistory)
    private readonly historyRepo: Repository<OrderHistory>,

    @Inject('KAFKA_SERVICE')
    private readonly kafka: ClientKafka,

    @Inject('CUSTOMER_PACKAGE')
    private readonly customerClient: ClientGrpc,

    @Inject('CATALOGUE_PACKAGE')
    private readonly catalogueClient: ClientGrpc,

    @Inject('INVENTORY_PACKAGE')
    private readonly inventoryClient: ClientGrpc,
  ) {}

  onModuleInit() {
    this.customerService = this.customerClient.getService<ICustomerGrpcService>('CustomerService');
    this.catalogueService = this.catalogueClient.getService<ICatalogueGrpcService>('CatalogueService');
    this.inventoryService = this.inventoryClient.getService<IInventoryGrpcService>('InventoryService');
  }

  // ============= CRUD =============

  async create(dto: CreateOrderDto): Promise<Order> {
    // 1. Validate customer exists
    await this.validateCustomer(dto.customerId);

    // 2. Validate all products exist and get prices
    const validatedItems = await this.validateProducts(dto.items);

    // 3. Generate order number
    const orderNumber = await this.generateOrderNumber();

    // 4. Calculate totals
    const subtotal = validatedItems.reduce(
      (sum, item) => sum + item.price * item.quantity,
      0,
    );

    // 5. Create order
    const order = await this.orderRepo.save(
      this.orderRepo.create({
        orderNumber,
        customerId: dto.customerId,
        subtotal,
        totalAmount: subtotal,
        notes: dto.notes,
        shippingAddress: dto.shippingAddress,
        billingAddress: dto.billingAddress,
        status: 'pending',
      }),
    );

    // 6. Add items
    const items = await Promise.all(
      validatedItems.map((item) =>
        this.itemRepo.save(
          this.itemRepo.create({
            orderId: order.id,
            productId: item.productId,
            quantity: item.quantity,
            price: item.price,
            subtotal: item.price * item.quantity,
            notes: item.notes,
          }),
        ),
      ),
    );

    order.items = items;
    order.totalAmount = order.calculateTotal();
    await this.orderRepo.save(order);

    // 7. Save history
    await this.historyRepo.save(
      this.historyRepo.create({
        orderId: order.id,
        orderNumber: order.orderNumber,
        action: 'created',
        newStatus: 'pending',
        notes: `Order created with ${items.length} items`,
      }),
    );

    // 8. Emit order.created event (Inventory will listen and reserve stock)
    const orderCreatedEvent = {
      ...createBaseEvent('order.created', 'order-svc'),
      eventType: 'order.created',
      data: {
        orderId: order.id,
        orderNumber: order.orderNumber,
        customerId: order.customerId,
        totalAmount: Number(order.totalAmount),
        items: items.map(item => ({
          productId: item.productId,
          quantity: item.quantity,
          price: Number(item.price),
        })),
        createdAt: order.createdAt,
      },
    };

    console.log('ðŸš€ Emitting order.created event:', orderCreatedEvent);
    this.kafka.emit('order.created', orderCreatedEvent);

    return order;
  }

  /**
   * Validate customer exists
   */
  private async validateCustomer(customerId: number): Promise<void> {
    try {
      const response: any = await firstValueFrom(
        this.customerService.getCustomerById({ id: customerId })
      );
      if (!response || !response.customer) {
        throw new NotFoundException(`Customer ${customerId} not found`);
      }
    } catch (error) {
      if (error instanceof NotFoundException) throw error;
      throw new BadRequestException(`Failed to validate customer: ${error.message}`);
    }
  }

  /**
   * Validate products exist and return with actual prices from catalogue
   */
  private async validateProducts(items: Array<{ productId: number; quantity: number; price: number; notes?: string }>): Promise<ValidatedOrderItem[]> {
    const validatedItems: ValidatedOrderItem[] = [];

    for (const item of items) {
      try {
        // Get product from catalogue
        const response: any = await firstValueFrom(
          this.catalogueService.getProductById({ id: item.productId })
        );

        if (!response || !response.product) {
          throw new NotFoundException(`Product ${item.productId} not found in catalogue`);
        }

        const product = response.product;

        // Use catalogue price (ignore client-provided price for security)
        validatedItems.push({
          productId: item.productId,
          quantity: item.quantity,
          price: Number(product.price), // Use price from catalogue
          notes: item.notes,
        });

      } catch (error) {
        if (error instanceof NotFoundException) throw error;
        throw new BadRequestException(`Failed to validate product ${item.productId}: ${error.message}`);
      }
    }

    return validatedItems;
  }

  async list(): Promise<Order[]> {
    return this.orderRepo.find({
      relations: ['items'],
      order: { createdAt: 'DESC' },
    });
  }

  async listByCustomer(customerId: number): Promise<Order[]> {
    return this.orderRepo.find({
      where: { customerId },
      relations: ['items'],
      order: { createdAt: 'DESC' },
    });
  }

  // Alias for gRPC compatibility
  async getByCustomerId(customerId: string, page?: number, limit?: number): Promise<Order[]> {
    return this.listByCustomer(Number(customerId));
  }

  async getById(id: number): Promise<Order> {
    const order = await this.orderRepo.findOne({
      where: { id },
      relations: ['items'],
    });

    if (!order) {
      throw new NotFoundException(`Order ${id} not found`);
    }

    return order;
  }

  async getByOrderNumber(orderNumber: string): Promise<Order> {
    const order = await this.orderRepo.findOne({
      where: { orderNumber },
      relations: ['items'],
    });

    if (!order) {
      throw new NotFoundException(`Order ${orderNumber} not found`);
    }

    return order;
  }

  async update(id: number, dto: UpdateOrderDto): Promise<Order> {
    const order = await this.getById(id);

    if (order.status !== 'pending') {
      throw new BadRequestException(
        `Cannot update order in ${order.status} status`,
      );
    }

    // LÆ°u tráº¡ng thÃ¡i vÃ  dá»¯ liá»‡u trÆ°á»›c khi update
    const previousStatus = order.status;
    const previousData = {
      notes: order.notes,
      shippingAddress: order.shippingAddress,
      billingAddress: order.billingAddress,
    };

    // Update order - chá»‰ update cÃ¡c field Ä‘Æ°á»£c phÃ©p
    if (dto.notes !== undefined) order.notes = dto.notes;
    if (dto.shippingAddress !== undefined) order.shippingAddress = dto.shippingAddress;
    if (dto.billingAddress !== undefined) order.billingAddress = dto.billingAddress;

    const updated = await this.orderRepo.save(order);

    // Save history
    await this.historyRepo.save(
      this.historyRepo.create({
        orderId: updated.id,
        orderNumber: updated.orderNumber,
        action: 'updated',
        previousStatus,
        newStatus: updated.status,
        notes: `Order updated: ${Object.keys(dto).filter(k => dto[k] !== undefined).join(', ')}`,
      }),
    );

    // Emit ORDER_UPDATED event
    this.kafka.emit('order.updated', {
      eventId: crypto.randomUUID(),
      eventType: 'order.updated',
      timestamp: new Date(),
      source: 'order-svc',
      data: {
        orderId: updated.id,
        orderNumber: updated.orderNumber,
        customerId: updated.customerId,
        previousStatus,
        newStatus: updated.status,
        changes: {
          notes: dto.notes,
          shippingAddress: dto.shippingAddress,
          billingAddress: dto.billingAddress,
        },
        updatedAt: updated.updatedAt,
      },
    });

    console.log(`ðŸ“¤ [ORDER-SVC] Emitted ORDER_UPDATED event for order ${updated.orderNumber}`);

    return updated;
  }

  // ============= STATUS MANAGEMENT =============

  async updateStatus(id: number, dto: UpdateStatusDto): Promise<Order> {
    const order = await this.getById(id);
    const previousStatus = order.status;

    // Validate status transitions
    const validTransitions = {
      pending: ['confirmed', 'cancelled'],
      confirmed: ['processing', 'cancelled'],
      processing: ['shipped', 'cancelled'],
      shipped: ['delivered'],
      delivered: [],
      cancelled: [],
    };

    if (!(validTransitions[previousStatus as keyof typeof validTransitions] as string[]).includes(dto.status)) {
      throw new BadRequestException(
        `Cannot transition from ${previousStatus} to ${dto.status}`,
      );
    }

    order.status = dto.status;
    const updated = await this.orderRepo.save(order);

    // Save history
    await this.historyRepo.save(
      this.historyRepo.create({
        orderId: id,
        orderNumber: order.orderNumber,
        action: 'status_changed',
        previousStatus,
        newStatus: dto.status,
        notes: dto.notes,
      }),
    );

    this.kafka.emit('order.updated', {
      eventId: crypto.randomUUID(),
      eventType: 'order.updated',
      timestamp: new Date(),
      source: 'order-svc',
      data: {
        orderId: order.id,
        orderNumber: order.orderNumber,
        customerId: order.customerId,
        previousStatus,
        newStatus: dto.status,
        updatedAt: new Date(),
      },
    });

    // Emit specific event for order completed
    if (dto.status === 'delivered') {
      this.kafka.emit('order.completed', {
        eventId: crypto.randomUUID(),
        eventType: 'order.completed',
        timestamp: new Date(),
        source: 'order-svc',
        data: {
          orderId: order.id,
          orderNumber: order.orderNumber,
          customerId: order.customerId,
          totalAmount: order.totalAmount,
          completedAt: new Date(),
        },
      });
    }

    if (dto.status === 'cancelled') {
      this.kafka.emit('order.cancelled', {
        eventId: crypto.randomUUID(),
        eventType: 'order.cancelled',
        timestamp: new Date(),
        source: 'order-svc',
        data: {
          orderId: order.id,
          orderNumber: order.orderNumber,
          customerId: order.customerId,
          reason: dto.notes || 'No reason provided',
        },
      });
    }

    return updated;
  }

  // Cancel order shortcut method
  async cancel(id: number, reason?: string): Promise<Order> {
    return this.updateStatus(id, { 
      status: 'cancelled', 
      notes: reason || 'Order cancelled by customer' 
    });
  }

  // ============= ITEM MANAGEMENT =============

  async addItem(id: number, dto: AddItemDto): Promise<Order> {
    const order = await this.getById(id);

    if (order.status !== 'pending') {
      throw new BadRequestException(
        `Cannot add items to order in ${order.status} status`,
      );
    }

    // Check if product already in order
    const existingItem = order.items.find((i) => i.productId === dto.productId);

    if (existingItem) {
      existingItem.quantity += dto.quantity;
      existingItem.subtotal = existingItem.calculateSubtotal();
      await this.itemRepo.save(existingItem);
    } else {
      const newItem = await this.itemRepo.save(
        this.itemRepo.create({
          orderId: order.id,
          productId: dto.productId,
          quantity: dto.quantity,
          price: dto.price,
          subtotal: dto.price * dto.quantity,
          notes: dto.notes,
        }),
      );
      order.items.push(newItem);
    }

    // Recalculate totals
    order.subtotal = order.items.reduce(
      (sum, item) => sum + item.subtotal,
      0,
    );
    order.totalAmount = order.calculateTotal();
    const updated = await this.orderRepo.save(order);

    // Save history
    await this.historyRepo.save(
      this.historyRepo.create({
        orderId: id,
        orderNumber: order.orderNumber,
        action: 'item_added',
        notes: `Added ${dto.quantity} x product ${dto.productId}`,
      }),
    );

    return updated;
  }

  async deleteItem(id: number, itemId: number): Promise<Order> {
    const order = await this.getById(id);

    if (order.status !== 'pending') {
      throw new BadRequestException(
        `Cannot remove items from order in ${order.status} status`,
      );
    }

    const item = order.items.find((i) => i.id === itemId);

    if (!item) {
      throw new NotFoundException(
        `Item ${itemId} not found in order ${id}`,
      );
    }

    await this.itemRepo.delete(itemId);

    // Recalculate totals
    order.items = order.items.filter((i) => i.id !== itemId);
    order.subtotal = order.items.reduce(
      (sum, item) => sum + item.subtotal,
      0,
    );
    order.totalAmount = order.calculateTotal();
    const updated = await this.orderRepo.save(order);

    // Save history
    await this.historyRepo.save(
      this.historyRepo.create({
        orderId: id,
        orderNumber: order.orderNumber,
        action: 'item_removed',
        notes: `Removed item ${itemId} (product ${item.productId})`,
      }),
    );

    return updated;
  }

  // ============= UTILITIES =============

  async getOrderHistory(id: number): Promise<OrderHistory[]> {
    return this.historyRepo.find({
      where: { orderId: id },
      order: { createdAt: 'DESC' },
    });
  }

  async generateOrderNumber(): Promise<string> {
    const today = new Date();
    const year = today.getFullYear();
    const month = String(today.getMonth() + 1).padStart(2, '0');

    // Get latest order number for this month
    const latestOrder = await this.orderRepo
      .createQueryBuilder('order')
      .where('order.orderNumber LIKE :pattern', {
        pattern: `ORD-${year}-${month}-%`,
      })
      .orderBy('order.orderNumber', 'DESC')
      .take(1)
      .getOne();

    let sequence = 1;
    if (latestOrder) {
      const lastSequence = parseInt(
        latestOrder.orderNumber.split('-')[3],
        10,
      );
      sequence = lastSequence + 1;
    }

    const sequenceStr = String(sequence).padStart(5, '0');
    return `ORD-${year}-${month}-${sequenceStr}`;
  }

  async getOrderStats(customerId: number): Promise<any> {
    const orders = await this.orderRepo.find({
      where: { customerId },
      relations: ['items'],
    });

    const totalOrders = orders.length;
    const totalSpent = orders.reduce((sum, o) => sum + Number(o.totalAmount), 0);
    const avgOrderValue = totalOrders > 0 ? totalSpent / totalOrders : 0;
    const totalItems = orders.reduce((sum, o) => sum + o.getItemCount(), 0);

    return {
      totalOrders,
      totalSpent: Number(totalSpent.toFixed(2)),
      avgOrderValue: Number(avgOrderValue.toFixed(2)),
      totalItems,
    };
  }
}
